Fix padding on mobile

--- a/src/pages/Auth/Auth.module.css
+++ b/src/pages/Auth/Auth.module.css
@@ -1,9 +1,10 @@
 .authWrapper {
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  composes: responsive from "../../styles/styles.css";
 }
 
 .toggleText {
